# OvercompleteBetaVariationalAutoEncoderKernel

./: .gitignore  LICENSE  README.md  main.py  obvaek0.py  obvaek1.py  pyproject.toml
.github/workflows/: ci.yml
src/obvaekernel/: __init__.py  core.py
tests/: test_obvaekernel.py
